test_output_final7.log
Build profile: -w ghc-9.14.1 -O1
In order, the following will be built (use -v for more details):
 - azimuth-0.1.0 (test:azimuth-test) (file test/AdvancedTelemetrySpec.hs changed)
Preprocessing test suite 'azimuth-test' for azimuth-0.1.0...
Building test suite 'azimuth-test' for azimuth-0.1.0...
[ 8 of 21] Compiling AdvancedTelemetrySpec ( test/AdvancedTelemetrySpec.hs, dist-newstyle/build/x86_64-linux/ghc-9.14.1/azimuth-0.1.0/t/azimuth-test/build/azimuth-test/azimuth-test-tmp/AdvancedTelemetrySpec.o ) [Source file changed]
test/AdvancedTelemetrySpec.hs:488:5: error: [GHC-83865]
    • Couldn't match type ‘Arg ()’ with ‘()’
      Expected: hspec-core-2.11.16:Test.Hspec.Core.Spec.Monad.SpecM () ()
        Actual: hspec-core-2.11.16:Test.Hspec.Core.Spec.Monad.SpecM
                  (Arg ()) ()
    • In a stmt of a 'do' block:
        it "should handle extreme metric values"
          $ do unsafePerformIO
                 $ do writeIORef enableMetricSharing False
                      metric <- createMetric "extreme-test" "count"
                      ....
      In the second argument of ‘($)’, namely
        ‘do it "should handle extreme metric values"
              $ do unsafePerformIO $ do ...
            it "should handle Unicode text in all components"
              $ property $ \ unicodeText -> let ... in unsafePerformIO $ ...’
      In a stmt of a 'do' block:
        describe "Boundary Conditions"
          $ do it "should handle extreme metric values"
                 $ do unsafePerformIO $ do ...
               it "should handle Unicode text in all components"
                 $ property $ \ unicodeText -> let ... in unsafePerformIO $ ...
    |
488 |     it "should handle extreme metric values" $ do
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

